(Client/MainView) Fix fab-button icon alignment

--- a/client/firebase-authentication/firebase-authentication.component.scss
+++ b/client/firebase-authentication/firebase-authentication.component.scss
@@ -27,9 +27,6 @@ mat-list-item {
 	font-weight: 300;
 	font-size: 25px;
 }
-mat-icon {
-	margin: 2px 8px;
-}
 .no-users {
 	font-style: italic;
 }
